src/main/java/code/lucamarrocco/wiki/parser/WikiParser.java
/* Generated By:JavaCC: Do not edit this line. WikiParser.java */
package code.lucamarrocco.wiki.parser;

import java.io.InputStream;

import org.apache.commons.logging.Log;
import org.apache.commons.logging.LogFactory;

import code.lucamarrocco.wiki.ast.BodyDeclaration;
import code.lucamarrocco.wiki.ast.BreakLine;
import code.lucamarrocco.wiki.ast.Content;
import code.lucamarrocco.wiki.ast.DecoratedText;
import code.lucamarrocco.wiki.ast.BreakLine;
import code.lucamarrocco.wiki.ast.Content;
import code.lucamarrocco.wiki.ast.DecoratedText;
import code.lucamarrocco.wiki.ast.LinkText;
import code.lucamarrocco.wiki.ast.List;
import code.lucamarrocco.wiki.ast.ListItem;
import code.lucamarrocco.wiki.ast.Text;
import code.lucamarrocco.wiki.ast.TitleText;
import code.lucamarrocco.wiki.ast.LinkText;
import code.lucamarrocco.wiki.ast.List;
import code.lucamarrocco.wiki.ast.ListItem;
import code.lucamarrocco.wiki.ast.Text;
import code.lucamarrocco.wiki.ast.TitleText;


public final class WikiParser implements WikiParserConstants {
        private Log logger = LogFactory.getLog(WikiParser.class);

    private static WikiParser parser;

    public static Content parse(InputStream in) throws ParseException {
        if (parser == null) {
            parser = new WikiParser(in);
        } else {
            parser.ReInit(in);
        }
        return parser.Content();
    }

/*****************************************
 * THE JAVA LANGUAGE GRAMMAR STARTS HERE *
 *****************************************/

/*
 * Program structuring syntax follows.
 */
  final public void End() throws ParseException {
    if (jj_2_1(3)) {
      jj_consume_token(0);
    } else if (jj_2_2(3)) {
      jj_consume_token(BREAKLINE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public Content Content() throws ParseException {
        Content content = new Content();
        BodyDeclaration bodyDeclaration;
    label_1:
    while (true) {
      if (jj_2_3(3)) {
        ;
      } else {
        break label_1;
      }
      bodyDeclaration = BodyDeclaration();
                                               content.addBodyDeclaration(bodyDeclaration);
    }
    End();
          {if (true) return content;}
    throw new Error("Missing return statement in function");
  }

  final public BodyDeclaration BodyDeclaration() throws ParseException {
        BodyDeclaration bodyDeclaration;
    if (jj_2_4(3)) {
      bodyDeclaration = List();
                                   {if (true) return bodyDeclaration;}
    } else if (jj_2_5(3)) {
      bodyDeclaration = LinkText();
                                       {if (true) return bodyDeclaration;}
    } else if (jj_2_6(3)) {
      bodyDeclaration = TitleText(0);
                                         {if (true) return bodyDeclaration;}
    } else if (jj_2_7(3)) {
      bodyDeclaration = DecoratedText();
                                            {if (true) return bodyDeclaration;}
    } else if (jj_2_8(3)) {
      bodyDeclaration = Text();
                                   {if (true) return bodyDeclaration;}
    } else if (jj_2_9(3)) {
      bodyDeclaration = BreakLine();
                                        {if (true) return bodyDeclaration;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public TitleText TitleText(int level) throws ParseException {
        TitleText titleText;
        Text text;
    if (jj_2_12(3)) {
      jj_consume_token(TITLE);
      titleText = TitleText(level + 1);
      if (jj_2_10(3)) {
        jj_consume_token(TITLE);
      } else if (jj_2_11(3)) {
        End();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                                     {if (true) return titleText;}
    } else if (jj_2_13(3)) {
      text = Text();
                        {if (true) return new TitleText().setLevel(level).setText(text);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public DecoratedText DecoratedText() throws ParseException {
        DecoratedText decoratedText;
        Text text;
    if (jj_2_22(3)) {
      jj_consume_token(BOLD);
      decoratedText = DecoratedText();
      if (jj_2_14(3)) {
        jj_consume_token(BOLD);
      } else if (jj_2_15(3)) {
        End();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                                  {if (true) return decoratedText.setType(DecoratedText.BOLD);}
    } else if (jj_2_23(3)) {
      jj_consume_token(ITALIC);
      decoratedText = DecoratedText();
      if (jj_2_16(3)) {
        jj_consume_token(ITALIC);
      } else if (jj_2_17(3)) {
        End();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                                      {if (true) return decoratedText.setType(DecoratedText.ITALIC);}
    } else if (jj_2_24(3)) {
      jj_consume_token(BOLDITALIC);
      decoratedText = DecoratedText();
      if (jj_2_18(3)) {
        jj_consume_token(BOLDITALIC);
      } else if (jj_2_19(3)) {
        End();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                                               {if (true) return decoratedText.setType(DecoratedText.BOLDITALIC);}
    } else if (jj_2_25(3)) {
      jj_consume_token(UNDERLINE);
      decoratedText = DecoratedText();
      if (jj_2_20(3)) {
        jj_consume_token(UNDERLINE);
      } else if (jj_2_21(3)) {
        End();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                                           {if (true) return decoratedText.setType(DecoratedText.UNDERLINE);}
    } else if (jj_2_26(3)) {
      text = Text();
                        {if (true) return new DecoratedText().setType(DecoratedText.NORMAL).setText(text);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public List List() throws ParseException {
        List list;
    if (jj_2_27(3)) {
      list = OrderedList();
                               {if (true) return list;}
    } else if (jj_2_28(3)) {
      list = UnorderedList();
                                 {if (true) return list;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public List UnorderedList() throws ParseException {
        Text text;
        List list = new List().setType(List.UNORDERED_LIST);
        List nestedList;
    if (jj_2_32(3)) {
      jj_consume_token(ULI);
      text = DecoratedText();
                                       list.addListItem(new ListItem().setText(text));
      if (jj_2_29(3)) {
        jj_consume_token(BREAKLINE);
        nestedList = NestedUnorderedList();
                                                                                                                                                  list.addListItem(nestedList);
      } else {
        ;
      }
      label_2:
      while (true) {
        if (jj_2_30(3)) {
          ;
        } else {
          break label_2;
        }
        jj_consume_token(BREAKLINE);
        jj_consume_token(ULI);
        text = DecoratedText();
                                                                                                                                                                                                                               list.addListItem(new ListItem().setText(text));
      }
      End();
                                                                                                                                                                                                                                                                                                   {if (true) return list;}
    } else if (jj_2_33(3)) {
      jj_consume_token(ULI);
      text = DecoratedText();
                                       list.addListItem(new ListItem().setText(text));
      if (jj_2_31(3)) {
        jj_consume_token(BREAKLINE);
        nestedList = NestedUnorderedList();
                                                                                                                                                  list.addListItem(nestedList);
      } else {
        ;
      }
      End();
                                                                                                                                                                                           {if (true) return list;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public List NestedUnorderedList() throws ParseException {
        Text text;
        List list = new List().setType(List.UNORDERED_LIST);
    if (jj_2_36(3)) {
      jj_consume_token(ULIULI);
      text = DecoratedText();
                                          list.addListItem(new ListItem().setText(text));
      label_3:
      while (true) {
        if (jj_2_34(3)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(BREAKLINE);
        jj_consume_token(ULIULI);
        text = DecoratedText();
                                                                                                                                                  list.addListItem(new ListItem().setText(text));
      }
                                                                                                                                                                                                                {if (true) return list;}
    } else if (jj_2_37(3)) {
      jj_consume_token(ULIULI);
      text = DecoratedText();
                                          list.addListItem(new ListItem().setText(text));
      label_4:
      while (true) {
        if (jj_2_35(3)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(BREAKLINE);
        jj_consume_token(ULIULI);
        text = DecoratedText();
                                                                                                                                                  list.addListItem(new ListItem().setText(text));
      }
                                                                                                                                                                                                                {if (true) return list;}
    } else if (jj_2_38(3)) {
      jj_consume_token(ULIULI);
      text = DecoratedText();
                                          {if (true) return list.addListItem(new ListItem().setText(text));}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public List OrderedList() throws ParseException {
        Text text;
        List list = new List().setType(List.ORDERED_LIST);
        List nestedList;
    if (jj_2_42(3)) {
      jj_consume_token(OLI);
      text = DecoratedText();
                                       list.addListItem(new ListItem().setText(text));
      if (jj_2_39(3)) {
        jj_consume_token(BREAKLINE);
        nestedList = NestedOrderedList();
                                                                                                                                                list.addListItem(nestedList);
      } else {
        ;
      }
      label_5:
      while (true) {
        if (jj_2_40(3)) {
          ;
        } else {
          break label_5;
        }
        jj_consume_token(BREAKLINE);
        jj_consume_token(OLI);
        text = DecoratedText();
                                                                                                                                                                                                                             list.addListItem(new ListItem().setText(text));
      }
      End();
                                                                                                                                                                                                                                                                                                 {if (true) return list;}
    } else if (jj_2_43(3)) {
      jj_consume_token(OLI);
      text = DecoratedText();
                                       list.addListItem(new ListItem().setText(text));
      if (jj_2_41(3)) {
        jj_consume_token(BREAKLINE);
        nestedList = NestedOrderedList();
                                                                                                                                                list.addListItem(nestedList);
      } else {
        ;
      }
      End();
                                                                                                                                                                                         {if (true) return list;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public List NestedOrderedList() throws ParseException {
        Text text;
        List list = new List().setType(List.ORDERED_LIST);
    if (jj_2_46(3)) {
      jj_consume_token(OLIOLI);
      text = DecoratedText();
                                          list.addListItem(new ListItem().setText(text));
      label_6:
      while (true) {
        if (jj_2_44(3)) {
          ;
        } else {
          break label_6;
        }
        jj_consume_token(BREAKLINE);
        jj_consume_token(OLIOLI);
        text = DecoratedText();
                                                                                                                                                  list.addListItem(new ListItem().setText(text));
      }
                                                                                                                                                                                                                {if (true) return list;}
    } else if (jj_2_47(3)) {
      jj_consume_token(OLIOLI);
      text = DecoratedText();
                                          list.addListItem(new ListItem().setText(text));
      label_7:
      while (true) {
        if (jj_2_45(3)) {
          ;
        } else {
          break label_7;
        }
        jj_consume_token(BREAKLINE);
        jj_consume_token(OLIOLI);
        text = DecoratedText();
                                                                                                                                                  list.addListItem(new ListItem().setText(text));
      }
                                                                                                                                                                                                                {if (true) return list;}
    } else if (jj_2_48(3)) {
      jj_consume_token(OLIOLI);
      text = DecoratedText();
                                          {if (true) return list.addListItem(new ListItem().setText(text));}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public LinkText LinkText() throws ParseException {
        LinkText href = null;
        Text description = null;
        String string;
    if (jj_2_54(3)) {
      href = HyperLink();
                             {if (true) return href;}
    } else if (jj_2_55(3)) {
      jj_consume_token(LBRACKET);
      href = HyperLink();
      if (jj_2_49(3)) {
        description = Text();
                                                              href.setText(description);
      } else {
        ;
      }
      if (jj_2_50(3)) {
        jj_consume_token(RBRACKET);
      } else if (jj_2_51(3)) {
        End();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                                                                                   {if (true) return href;}
    } else if (jj_2_56(3)) {
      jj_consume_token(LBRACKET);
      jj_consume_token(STRING);
                              string = token.image;
      if (jj_2_52(3)) {
        jj_consume_token(RBRACKET);
      } else if (jj_2_53(3)) {
        End();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                                             {if (true) return new LinkText().setHref(string).setText(new Text().setValue(string));}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public LinkText HyperLink() throws ParseException {
    if (jj_2_57(3)) {
      jj_consume_token(HTTPSTRING);
                       {if (true) return new LinkText().setHref(token.image).setText(new Text().setValue(token.image));}
    } else if (jj_2_58(3)) {
      jj_consume_token(WIKIWORD);
                     {if (true) return new LinkText().setHref(token.image).setText(new Text().setValue(token.image));}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Text Text() throws ParseException {
        Text text;
    if (jj_2_60(3)) {
          StringBuffer stringBuffer = new StringBuffer();
      label_8:
      while (true) {
        jj_consume_token(STRING);
                    stringBuffer.append(token.image); stringBuffer.append(" ");
        if (jj_2_59(3)) {
          ;
        } else {
          break label_8;
        }
      }
          {if (true) return new Text().setValue(stringBuffer.toString().replaceAll(" $", ""));}
    } else if (jj_2_61(3)) {
      jj_consume_token(NOT);
      jj_consume_token(STRING);
                         {if (true) return new Text().setValue(token.image);}
    } else if (jj_2_62(3)) {
      jj_consume_token(20);
              {if (true) return new Text().setValue("'");}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public BreakLine BreakLine() throws ParseException {
    jj_consume_token(BREAKLINE);
                      {if (true) return new BreakLine();}
    throw new Error("Missing return statement in function");
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  final private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  final private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  final private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  final private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  final private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  final private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  final private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  final private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  final private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  final private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  final private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  final private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  final private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  final private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  final private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  final private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  final private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  final private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  final private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  final private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  final private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  final private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  final private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  final private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  final private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  final private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  final private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  final private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  final private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  final private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  final private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  final private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  final private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  final private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  final private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }
